header/banner gap fixed

--- a/src/styles/components/banner.css
+++ b/src/styles/components/banner.css
@@ -7,6 +7,7 @@
   background-position: center;
   display: flex;
   align-items: center;
+  margin: 0 0 170px;
 }
 
 .banner__content {
