--- a/src/styles/components/services.css
+++ b/src/styles/components/services.css
@@ -1,6 +1,6 @@
 .services {
   width: 100%;
-  padding: 170px 0;
+  padding: 0 0 170px;
   background: var(--color-secondary01);
   display: flex;
   flex-direction: column;
